OLV-17578 formbuilder: edit mode head jumping fix

--- a/src/sass/_forms.sass
+++ b/src/sass/_forms.sass
@@ -491,11 +491,13 @@
 		// max-width: calc(100% - 40px)
 		display: flex
 		align-items: center
+		min-height: 36px
 		&--column
 			flex-direction: column
 			align-items: start
 		.form__head-el
 			align-items: flex-start
+			min-height: auto
 	&__head-link, &__head-edit
 		display: flex
 		width: 14px
